Fixed issues from review
Signed-off-by: Andrey Balarev <andrey.balarev@bosch.com>